ConversationSettings component updated for Edit State and CSS overflow issues also handled There's still an outstanding issue of Edited conversation members not getting updated instantly through redux store that needs to be checked and corrected The conversation update logic also need to be reviewed especially for adding removing conversation members

--- a/app/react/components/ConversationSettings/ConversationSettings.css
+++ b/app/react/components/ConversationSettings/ConversationSettings.css
@@ -221,3 +221,7 @@ and (max-width: 1440px) {
   text-align: right;
   margin-left: 20px;
 }
+
+.membersContainer {
+  overflow: auto;
+}
